# photogram

./: .gitignore  CODE_REVIEW.md  CONTEXT.md  PROJECT_STRUCTURE.md  REQUIREMENTS.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: export.rs  media.rs  mod.rs  preferences.rs  projects.rs  templates.rs
src-tauri/src/commands/utils/: fs_atomic.rs  image_processing.rs  mod.rs  paths.rs
src-tauri/src/models/: mod.rs
src/components/: KeyboardShortcutsModal.tsx  TabBar.tsx
src/components/Editor/: CanvasArea.tsx  CanvasCropToolbar.tsx  CanvasElementRenderer.tsx  CanvasSlideIndicators.tsx  CanvasSnapGuides.tsx  CanvasZoomControls.tsx  CropOverlay.tsx  CropOverlayDarkOverlay.tsx  CropOverlayGrid.tsx  CropOverlayGuides.tsx  CropOverlayHandles.tsx  DockedLayersPanel.tsx  DockedMediaPanel.tsx  DragPreview.tsx  EditBar.tsx  EditorLayout.tsx  (+10 more)
src/constants/: aspectRatios.ts  canvasResolutions.ts
src/hooks/: useEditorShortcuts.ts
src/services/: assetRetention.ts  tauri.ts
src/stores/: clipboardStore.ts  cropStore.ts  editorStore.ts  elementStore.ts  historyStore.ts  mediaStore.ts  panelStore.ts  preferencesStore.ts  projectStore.ts  projectsStore.ts  shortcutsStore.ts  slideStore.ts  snapStore.ts  tabsStore.ts  templatesStore.ts
src/types/: history.ts  index.ts
src/utils/: contentRotation.ts  coordinates.ts  designConstants.ts  imageCache.ts  slideUtils.ts  snapping.ts
(+32 files in other folders)
